--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-slick": "^0.23.13",
     "clsx": "^2.1.1",
     "react": "^18.2.0",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-multi-carousel": "^2.8.5",
     "react-redux": "^9.1.2",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
