--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.2.5",
     "@types/react-slick": "^0.23.13",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "react": "^18.2.0",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
