--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "react": "^18.2.0",
+    "react-burger-menu": "^3.0.9",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-multi-carousel": "^2.8.5",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
+    "@types/react-burger-menu": "^2.8.7",
     "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
