--- a/package.json
+++ b/package.json
@@ -18,17 +18,17 @@
     "react-burger-menu": "^3.0.9",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
-    "react-multi-carousel": "^2.8.5",
+    "react-input-mask": "^2.0.4",
+    "react-number-format": "^5.4.0",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.23.1",
-    "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1"
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-burger-menu": "^2.8.7",
     "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18.2.22",
+    "@types/react-input-mask": "^3.0.5",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
