--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-slick": "^0.23.13",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "dompurify": "^3.1.5",
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.9",
     "react-datepicker": "^6.9.0",
@@ -24,6 +25,7 @@
     "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.5",
     "@types/react": "^18.2.66",
     "@types/react-burger-menu": "^2.8.7",
     "@types/react-datepicker": "^6.2.0",
